App now scrolls on body overflow. HTML scroll disabled and body fixed. This prevents bouncing on mobile nav

--- a/src/components/LeftSide/Carousel.scss
+++ b/src/components/LeftSide/Carousel.scss
@@ -79,7 +79,7 @@ $apothem: $item-width / (2 * (math.tan($PI / $n)));
                 iframe {
                     display: block;
                     background-color: teal;
-                    z-index: 4;
+                    // z-index: 4;
                 }
             }
             .scrim, .visitSiteButton {
